# ai_crypto_forecast

./: .gitignore  LICENSE  README.md  config.example.yaml  main.py  pyproject.toml  requirements.txt
crypto_predictor/: __init__.py  advice.py  auto_runner.py  auto_task_manager.py  backtesting.py  cli.py  config.py  config_loader.py  contract.py  database.py  exchange.py  i18n.py  logging_setup.py  market_data.py  model_evaluation.py  models.py  repositories.py  sentiment.py  service.py  time_utils.py  trade_lifecycle.py  validator.py  web_app.py
crypto_predictor/ai/: __init__.py  openai_provider.py  predictor.py
crypto_predictor/broker/: __init__.py  account.py  binance_broker.py  executor.py  models.py  paper_broker.py  risk_guard.py
crypto_predictor/domain/: repositories.py
crypto_predictor/infrastructure/: __init__.py  cache.py  database_backends.py  observability.py  retry.py  risk_policy.py  task_queue.py  task_status.py
crypto_predictor/infrastructure/persistence/: __init__.py  mysql_repository.py  postgres_repository.py  repository_factory.py  sqlite_repository.py
crypto_predictor/static/: dashboard.css
crypto_predictor/static/js/: api.js  chart.js  dashboard.js
crypto_predictor/templates/layouts/: base.html
crypto_predictor/templates/pages/: dashboard.html
crypto_predictor/templates/partials/: advice_panel.html  auto_control_panel.html  chart_panel.html  messages.html  orders_table.html  pagination.html  prediction_form.html  predictions_table.html  stats_cards.html  topbar.html
