[project]
name = "ai-crypto"
version = "0.1.0"
description = "Local crypto contract simulation and AI prediction dashboard."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "ccxt>=4.4.0",
  "openai>=1.100.0",
  "PyYAML>=6.0.0",
  "Flask>=3.0.0",
]

[project.optional-dependencies]
postgres = [
  "psycopg[binary]>=3.1",
]

[project.scripts]
ai-crypto = "crypto_predictor.cli:main"

[tool.setuptools.packages.find]
include = ["crypto_predictor*"]

